MAVrec/arduinoTeensy/etc-microscribe/MicroScribe SDK 3.0/samples/Probe_Mgr/Probe_Mgr/armdll32.h

	#define SERIAL_NUMBER_DISCRIMINATOR_ENABLED 1
#define ARM_MESSAGE							"MscribeUpdate"
#define ARM_DISCONNECTED_MESSAGE			"Mscribe device disconnected"
#define ARM_SUCCESS							0
#define ARM_ALREADY_USED					-1
#define ARM_NOT_ACCESSED					-2
#define ARM_CANT_CONNECT					-3
#define ARM_INVALID_PARENT					-4
#define ARM_NOT_CONNECTED					-5
#define ARM_BAD_PORTBAUD					-6
#define ARM_OUTOFMEMORY						-7
#define ARM_BUFFER_TOO_SMALL				-8
#define ARM_INVALID_PARAM					-9
#define ARM_DATA_ACCESS_ERROR				-10
#define ARM_VERSION_NUMBER_NOT_AVAILABLE	-11
#define ARM_WRONG_ERROR_HANDLER_TYPE		-12
#define ARM_CANT_GET_NUMDOF					-13
#define NOT_ENOUGH_POINTS					-14
#define INVALID_ARGUMENTS					-15
#define	NOT_CONVERGED						-16
#define PTS_TOO_CLOSE						-17
#define	SPHERE_SUCCESS						 0
#define ARM_3DOF			0x0001		
#define ARM_6DOF			0x0002		
#define ARM_3JOINT			0x0004		
#define ARM_6JOINT			0x0008		
#define ARM_FULL			0x0010		
#define ARM_INCHES			1
#define ARM_MM				2
#define ARM_DEGREES			1
#define ARM_RADIANS			2
#define NUM_ENCODERS		7       
#define NUM_ANALOGS			8       
#define NUM_BUTTONS			7       
#define MAX_PACKET_SIZE         42
#define MAX_STRING_SIZE         32
#define PARAM_BLOCK_SIZE		40
#define EXT_PARAM_BLOCK_SIZE	10
#define NUM_DOF					6
#define NUM_THETA_PARAM			7
#define MAX_STYLUS_ROLL_ENCODER	2000
#define DEFAULT_PERIOD_UPDATE	20	
#define MINIMUM_PERIOD_UPDATE	1	
#define MAXIMUM_PERIOD_UPDATE	250	
#define ARM_BUTTON_1			0x0001
#define ARM_BUTTON_2			0x0002
#define ARM_BUTTON_3			0x0004
#define ARM_BUTTON_4			0x0008
#define ARM_BUTTON_5			0x0010
#define ARM_BUTTON_6			0x0020
#define ARM_BUTTON_7			0x0040
#define ARM_CONNECTED			0x0001
#define ARM_USING_USB_PORT		0x0002
#define ARM_USING_SERIAL_PORT	0x0004
#define BAD_PORT_HANDLER		0x0001
#define CANT_OPEN_HANDLER		0x0002
#define NO_HCI_HANDLER			0x0004
#define CANT_BEGIN_HANDLER		0x0008
#define TIMED_OUT_HANDLER		0x0010
#define BAD_PACKET_HANDLER		0x0020
typedef unsigned char   byte;
typedef char*   hci_result;
typedef float   length;
typedef float   angle;
typedef float   ratio;
typedef float   matrix_4[4][4];
typedef char*   length_units;
typedef char*   angle_units;
typedef char*   angle_format;
typedef struct
{
	length  x;
	length  y;
	length  z;
} length_3D;
typedef struct
{
	angle   x;
	angle   y;
	angle   z;
} angle_3D;
typedef struct
{
	int     parsed;		
	int     error;		
	int     num_bytes_needed;
	byte    cmd_byte;
	byte    data[MAX_PACKET_SIZE];
	byte    *data_ptr;
} packet_rec;
typedef struct hci_rec
{
	int             port_num;		
	long int        baud_rate;		
	float           slow_timeout;	
	float           fast_timeout;	
	packet_rec      packet;			
	int             packets_expected; 
	int             marker;
	int             marker_updated;
	int     buttons;				
	int     button [NUM_BUTTONS];	
	long    timer;					
	int     analog [NUM_ANALOGS];	
	int     encoder [NUM_ENCODERS];	
	int     button_supported [NUM_BUTTONS];	
	int     max_timer;						
	int     max_analog [NUM_ANALOGS];		
	int     max_encoder [NUM_ENCODERS];		
	int     timer_updated;
	int     analog_updated [NUM_ANALOGS];
	int     encoder_updated [NUM_ENCODERS];
	int     home_pos [NUM_ENCODERS];
	 int    home_ref [NUM_ENCODERS];
	char    serial_number [MAX_STRING_SIZE];
	char    product_name [MAX_STRING_SIZE];
	char    product_id [MAX_STRING_SIZE];
	char    model_name [MAX_STRING_SIZE];
	char    comment [MAX_STRING_SIZE];
	char    param_format [MAX_STRING_SIZE];
	char    version [MAX_STRING_SIZE];
	hci_result      (*BAD_PORT_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*CANT_OPEN_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*NO_HCI_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*CANT_BEGIN_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*TIMED_OUT_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*BAD_PACKET_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*BAD_PASSWORD_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*BAD_VERSION_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*BAD_FORMAT_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*default_handler)();
	long int        user_data;
} hci_rec;
typedef hci_result ( *PERRORHANDLER ) (struct hci_rec *hci, hci_result condition);
typedef struct arm_rec
{
	length_3D       stylus_tip;		
	angle_3D        stylus_dir;		
	matrix_4        T;
	length_3D       endpoint [NUM_DOF];	
	angle           joint_rad [NUM_DOF];	
	angle           joint_deg [NUM_DOF];	
	length_units    len_units;		
	angle_units     ang_units;		
	angle_format    ang_format;		
	length  D[NUM_DOF];		
	length  A[NUM_DOF];		
	angle   ALPHA[NUM_DOF];	
	angle   BETA;			
	ratio   JOINT_RADIANS_FACTOR[NUM_DOF];
	ratio   JOINT_DEGREES_FACTOR[NUM_DOF];
	matrix_4        M[NUM_DOF];
	ratio           cs[NUM_DOF];		
	ratio           sn[NUM_DOF];		
	ratio           csALPHA[NUM_DOF];	
	ratio           snALPHA[NUM_DOF];
	int             timer_report;	
	int             anlg_reports;	
	int             num_points;
	void            (* packet_calc_fn)(struct arm_rec*);
	hci_rec         hci;
	byte            param_block[PARAM_BLOCK_SIZE];
	int             p_block_size;
	byte			ext_param_block[EXT_PARAM_BLOCK_SIZE];
    int				ext_p_block_size;
    float			pt2ptdist;		
	float			lastX, lastY, lastZ; 
	float			D5Point;		
} arm_rec;
ARMDLL32_API int	__stdcall	ArmStart				(HWND hwndParent);
ARMDLL32_API void	__stdcall	ArmEnd					(void);
ARMDLL32_API int	__stdcall	ArmConnectSN			(int port, long baud, char* serialNumber);
ARMDLL32_API int	__stdcall	ArmConnect				(int port, long baud);
ARMDLL32_API void	__stdcall	ArmDisconnect			(void);
ARMDLL32_API int	__stdcall	ArmReconnect			(void);
ARMDLL32_API int	__stdcall	ArmSetBckgUpdate		(int type);
ARMDLL32_API int	__stdcall	ArmSetUpdate			(int type);
ARMDLL32_API void * __stdcall	ArmGetArmRec			(void);
ARMDLL32_API void	__stdcall	ArmSetLengthUnits		(int type);
ARMDLL32_API void	__stdcall	ArmSetAngleUnits		(int type);
ARMDLL32_API  void	__cdecl		arm_calc_stylus_3DOF	(arm_rec *arm);
ARMDLL32_API  void  __cdecl		arm_calc_joints			(arm_rec *arm);
ARMDLL32_API  void  __cdecl		arm_calc_params			(arm_rec *arm);
ARMDLL32_API int	__stdcall	ArmSetUpdateEx			(int type, UINT minUpdatePeriodms);
ARMDLL32_API void	__stdcall	ArmCustomTip			(float delta);
ARMDLL32_API  int	__stdcall	ArmGetTipPosition 		(length_3D* pPosition);
ARMDLL32_API  int	__stdcall	ArmGetTipOrientation	(angle_3D  *pAngles);
ARMDLL32_API  int	__stdcall	ArmGetTipOrientationUnitVector(angle_3D  *pOrientationUnitVector);
ARMDLL32_API  int	__stdcall	ArmGetProductName		(char *szProductName, UINT  uiBufferLength);
ARMDLL32_API  int	__stdcall	ArmGetSerialNumber		(char *szSerialNumber, UINT  uiBufferLength);
ARMDLL32_API  int	__stdcall	ArmGetModelName			(char *szModelName, UINT  uiBufferLength);
ARMDLL32_API  int	__stdcall	ArmGetVersion			(char *szArmDllVersionNumber, char *szFirmwareVersionNumber, UINT  uiBufferLength);
ARMDLL32_API  int	__stdcall	ArmGetNumButtons		(int* piNumButtons);
ARMDLL32_API  int	__stdcall	ArmGetButtonsState		(DWORD *pdwButtonsState);